Check for group_member in cmake
instead of trying to use it on all non Apple Unix systems
E.g. the musl libc on Linux also does not provide this function since it
is a nonstandard GNU extension

--- a/src/cpp/core/CMakeLists.txt
+++ b/src/cpp/core/CMakeLists.txt
@@ -155,6 +155,7 @@ if (UNIX)
    check_function_exists(inotify_init1 HAVE_INOTIFY_INIT1)
    check_function_exists(getpeereid HAVE_GETPEEREID)
    check_function_exists(setresuid HAVE_SETRESUID)
+   check_function_exists(group_member HAVE_GROUP_MEMBER)
    if(EXISTS "/proc/self")
       set(HAVE_PROCSELF TRUE)
    endif()
