Check for backtrace function in cmake
Backtrace is not necessarily available on all non Windows system,
detecting its existence with cmake should be more reliable

--- a/src/cpp/core/CMakeLists.txt
+++ b/src/cpp/core/CMakeLists.txt
@@ -156,6 +156,7 @@ if (UNIX)
    check_function_exists(getpeereid HAVE_GETPEEREID)
    check_function_exists(setresuid HAVE_SETRESUID)
    check_function_exists(group_member HAVE_GROUP_MEMBER)
+   check_function_exists(backtrace HAVE_BACKTRACE)
    if(EXISTS "/proc/self")
       set(HAVE_PROCSELF TRUE)
    endif()
